--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -126,7 +126,7 @@
                                     </md-button>
                                 </md-menu-item>
                                 <md-menu-item>
-                                    <md-button ng-click="vm.viewSBTasklog(item)">View Tasklog</md-button>
+                                    <md-button ng-click="vm.viewSBTasklog(item)">View Dryrun</md-button>
                                 </md-menu-item>
                             </md-menu-content>
                         </md-menu>
