--- a/app/userlogs/userlog-reports.html
+++ b/app/userlogs/userlog-reports.html
@@ -61,6 +61,7 @@
             <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" style="margin: 4px">
                 <md-chips ng-model="vm.filterTags" style="margin-bottom: 24px; padding: 0 8px" md-autocomplete-snap md-require-match="true" flex>
                     <md-autocomplete
+                        md-autoselect="true"
                         md-search-text="searchText"
                         md-items="item in vm.querySearch(searchText)"
                         md-item-text="item.name"
