list config labels in new way on gui

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -110,7 +110,7 @@
                             </md-button>
                             <md-menu-content style="padding: 8px;">
                                 <md-menu-item>
-                                    <md-button ng-click="vm.openConfigLabelDialog(vm.subarray.id, $event)"
+                                    <md-button ng-click="parentScope.vm.openConfigLabelDialog(vm.subarray.id, $event)"
                                                title="Select a Config Label">
                                         <span>Select Config Label...</span>
                                     </md-button>
