--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -155,7 +155,7 @@
                                 </span>
                                 <span><i>{{item.owner}}</i></span>
                             </div>
-                            <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
+                            <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{item.description}}">{{item.description}}</span>
 
                             <span style="width: 75px">{{item.state}}</span>
                             <span style="width: 150px">{{item.verification_state}}</span>
