--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -5,7 +5,7 @@
         <div flex layout="column" style="padding: 0 8px">
             <div class="subarray-container" layout="row"
                  style="min-width: 450px; position: relative" flex
-                 ng-class="{'maintenance-bg':vm.subarray.maintenance}">
+                 ng-class="{'maintenance-bg': vm.subarray.maintenance}">
 
                 <div flex class="md-whiteframe-z2" layout="column">
                     <md-toolbar
@@ -161,26 +161,18 @@
                     <div flex layout="column" layout-wrap style="overflow-y: auto">
                         <div style="max-height: 80px" flex="25" class="resource-item" layout="row" layout-align="start center"
                              ng-repeat="resource in vm.subarray.allocations | orderBy:'name'"
-                             ng-class="{'transparent-background': vm.subarray.maintenance, 'maintenance-bg': vm.isResourceInMaintenance(resource), 'faulty-border': vm.isResourceFaulty(resource)}">
-                            <span style="min-width: 18px;">
-                                <span class="fa fa-wrench maintenance-text" style="font-size: 16px;"
-                                      ng-if="vm.isResourceInMaintenance(resource)"
-                                      title="Resource Marked In Maintenance"></span>
-                            </span>
-                            <span style="min-width: 18px;">
-                                <span class="fa fa-warning error-text" style="font-size: 16px;"
-                                      ng-if="vm.isResourceFaulty(resource)" title="Resource Marked Faulty"></span>
-                            </span>
-                            <span flex style="margin-left: 4px;"
+                             ng-class="{'maintenance-bg-hover': vm.isResourceInMaintenance(resource), 'faulty-border': vm.isResourceFaulty(resource)}">
+                            <span flex style="font-size: 18px; margin-left: 4px"
                                   ng-class="{'error-text':resource.state === 'faulty', 'maintenance-text':resource.maintenance}">{{resource.name}}</span>
                             <span class="icon-button fa fa-refresh" md-ink-ripple
                                 ng-if="$root.expertOrLO" ng-show="vm.subarray.maintenance && resource.maintenance"
                                 title="Restart Maintenance Device"
                                 ng-click="vm.listResourceMaintenanceDevicesDialog(resource, $event); $event.stopPropagation()"></span>
-                            <span class="icon-button fa fa-exclamation-circle" md-ink-ripple
+                            <span class="icon-button fa" md-ink-ripple
                                 title="Mark Resource As Faulty"
+                                ng-class="{'fa-exclamation-circle': !resource.faulty, 'fa-warning error-text opaque': resource.faulty}"
                                 ng-click="vm.markResourceFaulty(resource); $event.stopPropagation()"></span>
-                            <span class="icon-button fa fa-minus" md-ink-ripple
+                            <span class="icon-button fa fa-chevron-right" md-ink-ripple
                                 ng-if="$root.expertOrLO"
                                 title="Free Assigned Resource"
                                 ng-click="vm.freeAssignedResource(resource); $event.stopPropagation()"></span>
@@ -188,19 +180,19 @@
                     </div>
                 </div>
 
-                <md-button md-theme="{{themePrimaryButtons}}" class="md-raised md-primary"
-                           style="min-height: 100%; max-width: 31px; min-width: 31px; margin-left: 4px;"
-                           ng-show="$root.expertOrLO"
-                           ng-click="vm.assignSelectedResources();" title="Assign Resources to Subarray">
-                    <md-icon class="fa" md-font-icon="fa-chevron-left" style="width: auto; height: auto;"></md-icon>
-                </md-button>
-
                 <div flex class="overlay-progress-circular" layout="row" layout-align="center center"
                      ng-if="vm.subarray.showProgress">
                     <md-progress-circular md-mode="indeterminate"></md-progress-circular>
                 </div>
             </div>
         </div>
+
+        <md-button md-theme="{{themePrimaryButtons}}" class="md-raised md-primary"
+                   style="min-height: 100%; max-width: 31px; min-width: 31px;"
+                   ng-show="$root.expertOrLO" ng-disabled="vm.selectedResources.length === 0 || vm.selectAll"
+                   ng-click="vm.assignSelectedResources();" title="Assign Resources to Subarray">
+            <md-icon class="fa" md-font-icon="fa-chevron-left" style="width: auto; height: auto;"></md-icon>
+        </md-button>
 
         <div flex layout="column" style="max-width:400px; min-height: 500px; margin-right: 8px">
 
@@ -214,31 +206,26 @@
                            ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Resources..."/>
                 </md-toolbar>
 
-                <div flex style="overflow: auto">
-                    <div class="resource-item" layout="row" layout-align="start center"
+                <!-- TODO selection/drag select -->
+                <!-- TODO stretch buttons to max height -->
+                <div flex style="overflow: auto" layout="column" layout-wrap style="overflow-y: auto">
+                    <div style="max-height: 80px" flex="25" class="resource-item" layout="row" layout-align="start center"
                          ng-repeat="resource in filteredResources = (vm.poolResourcesFree | regexSearch:[{label:'name', value:'name'}]:vm.q | orderBy:'name')"
-                         ng-class="{'selected-resource-item': resource.selected}"
-                         ng-click="resource.selected = !resource.selected && $root.expertOrLO;">
-                    <span style="min-width: 22px;">
-                        <span class="fa fa-wrench maintenance-text" ng-if="vm.isResourceInMaintenance(resource)"
-                              title="Resource in Maintenance" style="font-size: 18px; margin-left: 4px;"></span>
-                    </span>
-                    <span style="min-width: 22px; margin-left: 4px;">
-                        <span class="fa fa-warning error-text" style="font-size: 18px; min-width: 18px;"
-                              ng-if="vm.isResourceFaulty(resource)" title="Resource Marked Faulty"></span>
-                    </span>
-                        <span flex style="font-size:18px; margin-left: 4px;"
-                              ng-class="{'error-text':resource.faulty, 'maintenance-text':resource.maintenance}">{{resource.name}}</span>
-                        <md-button ng-show="$root.expertOrLO" class="md-icon-button inline-action-button"
-                                   ng-click="vm.markResourceInMaintenance(resource); $event.stopPropagation()"
-                                   title="Mark Resource in Maintenance" style="margin: 0">
-                            <md-icon class="fa" md-font-icon="fa-wrench"></md-icon>
-                        </md-button>
-                        <md-button ng-show="$root.expertOrLO" class="md-icon-button inline-action-button"
-                                   ng-click="vm.markResourceFaulty(resource); $event.stopPropagation()"
-                                   title="Mark Resource As Faulty" style="margin: 0">
-                            <md-icon class="fa" md-font-icon="fa-exclamation-circle"></md-icon>
-                        </md-button>
+                         ng-class="{'selected-resource-item': resource.selected, 'maintenance-bg-hover': vm.isResourceInMaintenance(resource), 'faulty-border': vm.isResourceFaulty(resource)}"
+                         ng-click="vm.toggleResourceSelect(resource) && $root.expertOrLO;">
+                        <span class="icon-button fa fa-chevron-left" md-ink-ripple
+                            title="Assign to Subarray"
+                            ng-click="vm.assignResource(resource); $event.stopPropagation()"></span>
+                        <span flex style="font-size:18px; margin-left: 4px;" class="resource-name"
+                            ng-class="{'maintenance-text': resource.maintenance}">{{resource.name}}</span>
+                        <span class="icon-button fa fa-wrench" md-ink-ripple
+                            title="Mark Resource in Maintenance"
+                            ng-class="{'maintenance-text opaque': resource.maintenance}"
+                            ng-click="vm.markResourceInMaintenance(resource); $event.stopPropagation()"></span>
+                        <span class="icon-button fa" md-ink-ripple
+                            title="Mark Resource As Faulty"
+                            ng-class="{'fa-exclamation-circle': !resource.faulty, 'fa-warning error-text opaque': resource.faulty}"
+                            ng-click="vm.markResourceFaulty(resource); $event.stopPropagation()"></span>
                     </div>
                 </div>
             </div>
